fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 .tools .red {
-    width: 100px;
-    height: 100px;
-    min-height: 100px;
-    min-width: 100px;
+    width: 90px;
+    height: 90px;
+    min-height: 90px;
+    min-width: 90px;
     background-color: red;
     cursor: pointer;
     display: inline-block;
@@ -10,13 +10,14 @@
     border-radius: 10%;
     border: 2px solid white;
     align-self: center;
+    margin: 0 3px;
 }
 
 .tools .yellow {
-    width: 100px;
-    height: 100px;
-    min-height: 100px;
-    min-width: 100px;
+    width: 90px;
+    height: 90px;
+    min-height: 90px;
+    min-width: 90px;
     background-color: yellow;
     cursor: pointer;
     display: inline-block;
@@ -24,13 +25,14 @@
     border-radius: 10%;
     border: 2px solid white;
     align-self: center;
+    margin: 0 3px;
 }
 
 .tools .blue {
-    width: 100px;
-    height: 100px;
-    min-height: 100px;
-    min-width: 100px;
+    width: 90px;
+    height: 90px;
+    min-height: 90px;
+    min-width: 90px;
     background-color: blue;
     cursor: pointer;
     display: inline-block;
@@ -38,13 +40,14 @@
     border-radius: 10%;
     border: 2px solid white;
     align-self: center;
+    margin: 0 3px;
 }
 
 .tools .orange {
-    width: 100px;
-    height: 100px;
-    min-height: 100px;
-    min-width: 100px;
+    width: 90px;
+    height: 90px;
+    min-height: 90px;
+    min-width: 90px;
     background-color: orange;
     cursor: pointer;
     display: inline-block;
@@ -52,13 +55,14 @@
     border-radius: 10%;
     border: 2px solid white;
     align-self: center;
+    margin: 0 3px;
 }
 
 .tools .green {
-    width: 100px;
-    height: 100px;
-    min-height: 100px;
-    min-width: 100px;
+    width: 90px;
+    height: 90px;
+    min-height: 90px;
+    min-width: 90px;
     background-color: green;
     cursor: pointer;
     display: inline-block;
@@ -66,13 +70,14 @@
     border-radius: 10%;
     border: 2px solid white;
     align-self: center;
+    margin: 0 3px;
 }
 
 .tools .violet {
-    width: 100px;
-    height: 100px;
-    min-height: 100px;
-    min-width: 100px;
+    width: 90px;
+    height: 90px;
+    min-height: 90px;
+    min-width: 90px;
     background-color: violet;
     cursor: pointer;
     display: inline-block;
@@ -80,6 +85,7 @@
     border-radius: 10%;
     border: 2px solid white;
     align-self: center;
+    margin: 0 3px;
 }
 
 .tools {
@@ -91,18 +97,19 @@
 
 .tools .button {
     align-self: center;
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     border-radius: 10%;
     border: 2px solid white;
     cursor: pointer;
     color: white;
     background: #757575;
     font-weight: bold;
+    margin: 0 3px;
 }
 
 canvas {
-    box-shadow: -3px 2px 9px 6px black;
+    box-shadow: 1px 1px 8px 0px rgb(36, 36, 36);
     cursor: pointer;
     border-radius: 10px;
 }
@@ -111,4 +118,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgb(177, 177, 177);
+}
+
+.color-picker {
+   width:90px;
+   height:90px;
+   border-radius: 10%;
+   border: 2px solid white;
+   margin: 0 3px;
 }
